# MySql-Custom-Aggregate-UDFs

./: .gitignore  CMakeLists.txt  Readme.md  package_list.txt
src/: median.cpp  mode.cpp  product.cpp
test_server/: docker-compose.yaml  entrypoint.sh  load_function.sql
testing/: docker-compose.yaml
